# microProlog

./: Makefile  MicroProlog.opam  dune-project
regression/: dune  test001.t
src/: Driver.ml  SLD.ml  dune
